--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     </main>
 
     <footer class="footer">
-        &copy; SC Roeschwoog – Compte-rendus de réunions
+        &copy; SC Roeschwoog – Comptes-rendus de réunions
     </footer>
 </body>
 </html>
+
