--- a/reunions_general.html
+++ b/reunions_general.html
@@ -30,7 +30,8 @@
     </main>
 
     <footer class="footer">
-        &copy; SC Roeschwoog – Compte-rendus de réunion
+        &copy; SC Roeschwoog – Comptes-rendus de réunion
     </footer>
 </body>
 </html>
+
