--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 
 <body>
     <header class="header">
-        <img src="assets/logo.png" alt="Logo du SC Roeschwoog" class="logo">
+        <img src="logo.png" alt="Logo du SC Roeschwoog" class="logo">
         <h1>Contact</h1>
     </header>
 
@@ -35,3 +35,4 @@
     </footer>
 </body>
 </html>
+
