--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header class="header">
-        <img src="assets/logo.png" alt="Logo du SC Roeschwoog" class="logo">
+        <img src="logo.png" alt="Logo du SC Roeschwoog" class="logo">
         <h1>SC Roeschwoog</h1>
         <p>Site interne du club</p>
     </header>
@@ -34,4 +34,5 @@
     </footer>
 </body>
 </html>
+
 
