--- a/reunions_2425.html
+++ b/reunions_2425.html
@@ -9,7 +9,7 @@
 
 <body>
     <header class="header">
-        <img src="assets/logo.png" alt="Logo du SC Roeschwoog" class="logo">
+        <img src="logo.png" alt="Logo du SC Roeschwoog" class="logo">
         <h1>Rapports de réunion</h1>
     </header>
 
@@ -34,4 +34,5 @@
     </footer>
 </body>
 </html>
+
 
