--- a/reunions_2526.html
+++ b/reunions_2526.html
@@ -23,8 +23,8 @@
         <h2>Liste des rapports</h2>
 
         <ul class="report-list">
-            <li><a href="https://drive.google.com/file/d/162O4O1o6ufO_kFi3FiuQJL5XZpLhV7ag/view?usp=drive_link"></a>18/02/2026</li>
-            <li><a href="2026_02_18.txt"></a>24/11/2025</li>
+            <li><a href="https://drive.google.com/file/d/162O4O1o6ufO_kFi3FiuQJL5XZpLhV7ag/view?usp=sharing">18/02/2026</a></li>
+            <li><a href="index.html">24/11/2025</a></li>
 
         </ul>
     </main>
@@ -34,5 +34,3 @@
     </footer>
 </body>
 </html>
-
-
