--- a/reunions_2526.html
+++ b/reunions_2526.html
@@ -24,7 +24,7 @@
 
         <ul class="report-list">
             <li><a href="https://drive.google.com/file/d/162O4O1o6ufO_kFi3FiuQJL5XZpLhV7ag/view?usp=sharing">18/02/2026</a></li>
-            <li><a href="index.html">24/11/2025</a></li>
+            <li><a href="">xx/xx/xxx</a></li>
 
         </ul>
     </main>
@@ -34,3 +34,4 @@
     </footer>
 </body>
 </html>
+
