--- a/reunions_2425.html
+++ b/reunions_2425.html
@@ -23,8 +23,8 @@
         <h2>Liste des rapports</h2>
 
         <ul class="report-list">
-            <li><a href="reunions_2026">2026</a></li>
-            <li><a href="reunions_2025">2025</a></li>
+            <li><a href="">xx/xx/xxxx</a></li>
+            <li><a href="">yy/yy/yyyy</a></li>
 
         </ul>
     </main>
@@ -34,3 +34,4 @@
     </footer>
 </body>
 </html>
+
