--- a/reunions_2425.html
+++ b/reunions_2425.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>SC Roeschwoog – Rapports</title>
+    <title>SC Roeschwoog – Comptes-rendus saison 2024-2025</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <img src="logo.png" alt="Logo du SC Roeschwoog" class="logo">
-        <h1>Rapports de réunion</h1>
+        <h1>Comptes-rendus de réunion</h1>
     </header>
 
     <nav class="nav">
@@ -34,4 +34,5 @@
     </footer>
 </body>
 </html>
+
 
