--- a/reunions_2526.html
+++ b/reunions_2526.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>SC Roeschwoog – Coimptes</title>
+    <title>SC Roeschwoog –  Comptes-rendus réunions comité saison 2025-2026</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -34,5 +34,6 @@
     </footer>
 </body>
 </html>
+
 
 
