--- a/contacts.html
+++ b/contacts.html
@@ -153,12 +153,12 @@
             <div class="logo-box">
                 <img src="logo.png" alt="Logo">
             </div>
-            <h1>S.C. Roeschwoog - Comité</h1>
+            <h1>S.C. Roeschwoog</h1>
         </div>
 
         <nav>
             <a href="index.html">Accueil</a>
-            <a href="reunions_general.html">Réunions</a>
+            <a href="reunions_general.html">Ressources</a>
             <a href="contacts.html">Membres</a>
         </nav>
     </header>
@@ -168,16 +168,10 @@
         <div class="grid">
 
             <div class="card">
-                <a href="reunions_2526.html">Réunions 2025-2026</a>
-                <div class="desc">Comptes-rendus des réunions de la saison 2025-2026</div>
+                <a href="https://drive.google.com/file/d/1MMHocRJtWoC_iXPM1ebGcP1sXZ4qjjBG/view?usp=drive_link">Organigramme 2025-2026</a>
+                <div class="desc">Membres du comité sur la saison 2025-2026</div>
             </div>
 
-            <div class="card">
-                <a href="reunions_2425.html">Réunions 2024-2025</a>
-                <div class="desc">Comptes-rendus des réunions de la saison 2024-2025</div>
-            </div>
-
- 
 
         </div>
     </div>
