Modify reunion dates and details in reunions_2526.html
Updated the reunion dates and descriptions in the HTML file.

--- a/reunions_2526.html
+++ b/reunions_2526.html
@@ -173,8 +173,8 @@
             </div>
 
             <div class="card">
-                <a href="">xx/xx/xxxx</a>
-                <div class="desc">xxxxxxx</div>
+                <a href="https://drive.google.com/file/d/1V0qcfapbHHnDbkVr00nN0oa28jZRXWKP/view?usp=drive_link">26/11/2025</a>
+                <div class="desc">Fêtes de Noël, Commission, Winterparty, Marche gourmande</div>
             </div>
 
         </div>
@@ -186,3 +186,4 @@
 
 </body>
 </html>
+
