Add links for Marche gourmande and Winterparty

--- a/reunions_2425.html
+++ b/reunions_2425.html
@@ -151,6 +151,8 @@
         <nav>
             <a href="index.html">Accueil</a>
             <a href="reunions_general.html">Réunions</a>
+			<a href="marche.html">Marche gourmande</a>
+			<a href="winterparty.html">Winterparty</a>
             <a href="contacts.html">Membres</a>
         </nav>
     </header>
@@ -175,3 +177,4 @@
 
 </body>
 </html>
+
