--- a/reunions_general.html
+++ b/reunions_general.html
@@ -159,6 +159,8 @@
         <nav>
             <a href="index.html">Accueil</a>
             <a href="reunions_general.html">Réunions</a>
+			<a href="marche.html">Marche gourmande</a>
+			<a href="winterparty.html">Winterparty</a>
             <a href="contacts.html">Membres</a>
         </nav>
     </header>
@@ -188,3 +190,4 @@
 
 </body>
 </html>
+
