Change title to 'SC Roeschwoog - Contacts'

--- a/contacts.html
+++ b/contacts.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>SC Roeschwoog - Comité</title>
+    <title>SC Roeschwoog - Contacts</title>
     <style>
         body {
             font-family: "Inter", Arial, sans-serif;
@@ -184,4 +184,5 @@
 
 </body>
 </html>
+
 
