--- a/marche.html
+++ b/marche.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Marche gourmande</title>
+    <title>SC Roeschwoog - Marche gourmande</title>
     <style>
         body {
             font-family: "Inter", Arial, sans-serif;
