Modify title and header for reunions 2024-2025
Updated the title and header for the 2024-2025 reunions page, maintaining the existing styles and structure.

--- a/reunions_2425.html
+++ b/reunions_2425.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Liens utiles – App Mobile Glass</title>
+    <title>SC Roeschwoog - Réunions 2024-2025</title>
     <style>
         body {
             font-family: "Inter", Arial, sans-serif;
@@ -177,4 +177,5 @@
 
 </body>
 </html>
+
 
