--- a/reunions_2526.html
+++ b/reunions_2526.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>SC Roeschwoog - Comité</title>
+    <title>SC Roeschwoog - Réunions 2025-2026</title>
     <style>
         body {
             font-family: "Inter", Arial, sans-serif;
@@ -188,5 +188,6 @@
 
 </body>
 </html>
+
 
 
