Update page title and structure for reunions

--- a/reunions_general.html
+++ b/reunions_general.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>SC Roeschwoog - Comité</title>
+    <title>SC Roeschwoog - Réunions</title>
     <style>
         body {
             font-family: "Inter", Arial, sans-serif;
@@ -190,4 +190,5 @@
 
 </body>
 </html>
+
 
