--- a/winterparty.html
+++ b/winterparty.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Winterparty</title>
+    <title>SC Roeschwoog - Winterparty</title>
     <style>
         body {
             font-family: "Inter", Arial, sans-serif;
