Refactor contacts.html for improved structure

--- a/contacts.html
+++ b/contacts.html
@@ -153,7 +153,7 @@
             <div class="logo-box">
                 <img src="logo.png" alt="Logo">
             </div>
-            <h1>S.C. Roeschwoog</h1>
+            <h1>S.C. Roeschwoog - Contacts</h1>
         </div>
 
         <nav>
@@ -184,5 +184,6 @@
 
 </body>
 </html>
+
 
 
