Update title and description in marche.html

--- a/marche.html
+++ b/marche.html
@@ -145,7 +145,7 @@
             <div class="logo-box">
                 <img src="logo.png" alt="Logo">
             </div>
-            <h1>S.C. Roeschwoog</h1>
+            <h1>S.C. Roeschwoog - Marche gourmande</h1>
         </div>
 
         <nav>
@@ -163,7 +163,7 @@
 
             <div class="card">
                 <a href="">xx/xx/xxxx</a>
-                <div class="desc">Marche, Winterparty, Equipe 1</div>
+                <div class="desc">xxxx</div>
             </div>
 
  
