Fix HTML structure and improve formatting

--- a/reunions_2425.html
+++ b/reunions_2425.html
@@ -145,7 +145,7 @@
             <div class="logo-box">
                 <img src="logo.png" alt="Logo">
             </div>
-            <h1>S.C. Roeschwoog</h1>
+            <h1>S.C. Roeschwoog - Réunions 2024-2025</h1>
         </div>
 
         <nav>
@@ -177,5 +177,6 @@
 
 </body>
 </html>
+
 
 
