--- a/reunions_2526.html
+++ b/reunions_2526.html
@@ -153,7 +153,7 @@
             <div class="logo-box">
                 <img src="logo.png" alt="Logo">
             </div>
-            <h1>S.C. Roeschwoog</h1>
+            <h1>S.C. Roeschwoog - Réunions 2025-2026</h1>
         </div>
 
         <nav>
@@ -188,6 +188,7 @@
 
 </body>
 </html>
+
 
 
 
