--- a/reunions_general.html
+++ b/reunions_general.html
@@ -153,7 +153,7 @@
             <div class="logo-box">
                 <img src="logo.png" alt="Logo">
             </div>
-            <h1>S.C. Roeschwoog - Comité</h1>
+            <h1>S.C. Roeschwoog - Réunions</h1>
         </div>
 
         <nav>
@@ -190,5 +190,6 @@
 
 </body>
 </html>
+
 
 
