Update title for winter party event

--- a/winterparty.html
+++ b/winterparty.html
@@ -145,7 +145,7 @@
             <div class="logo-box">
                 <img src="logo.png" alt="Logo">
             </div>
-            <h1>S.C. Roeschwoog</h1>
+            <h1>S.C. Roeschwoog - Winterparty</h1>
         </div>
 
         <nav>
