Update link and description for Winterparty card

--- a/winterparty.html
+++ b/winterparty.html
@@ -162,8 +162,7 @@
         <div class="grid">
 
             <div class="card">
-                <a href="">xx/xx/xxxx</a>
-                <div class="desc">Marche, Winterparty, Equipe 1</div>
+                <a href="https://drive.google.com/file/d/1dj5wRu4yZ6oL-FJwwKfoISYTlu_rSz1a/view?usp=drive_link">Affiche 2026</a>
             </div>
 
  
