--- a/marche.html
+++ b/marche.html
@@ -136,6 +136,13 @@
             color: #4a5c4f;
             line-height: 1.5;
         }
+
+		footer {
+			text-align: center;
+			padding: 10px 0;
+			background: linear-gradient(135deg, #dfeee3, #f3f7f0);
+            color: #333;
+		}
     </style>
 </head>
 <body>
