Add footer and new card for 2026 tarifs

--- a/winterparty.html
+++ b/winterparty.html
@@ -136,6 +136,13 @@
             color: #4a5c4f;
             line-height: 1.5;
         }
+
+		footer {
+			text-align: center;
+			padding: 10px 0;
+			background: linear-gradient(135deg, #dfeee3, #f3f7f0);
+            color: #333;
+		}
     </style>
 </head>
 <body>
@@ -165,6 +172,9 @@
                 <a href="https://drive.google.com/file/d/1dj5wRu4yZ6oL-FJwwKfoISYTlu_rSz1a/view?usp=drive_link">Affiche 2026</a>
             </div>
 
+			<div class="card">
+                <a href="https://drive.google.com/file/d/1Blsm-LqoiY6WLHGUTXMQBtQAhRmxlpZD/view?usp=drive_link">Tarifs 2026</a>
+            </div>
  
 
         </div>
