Update links for Affiche and Tarifs 2026

--- a/winterparty.html
+++ b/winterparty.html
@@ -169,11 +169,11 @@
         <div class="grid">
 
             <div class="card">
-                <a href="https://drive.google.com/file/d/1dj5wRu4yZ6oL-FJwwKfoISYTlu_rSz1a/view?usp=drive_link">Affiche 2026</a>
+                <a href="https://1drv.ms/i/c/534b23b5926c6a32/IQClX7NcklWiTLEtY3659iavAQfQVawyamYI46RgrW8yWeU?e=yb5uXK">Affiche 2026</a>
             </div>
 
 			<div class="card">
-                <a href="https://drive.google.com/file/d/1Blsm-LqoiY6WLHGUTXMQBtQAhRmxlpZD/view?usp=drive_link">Tarifs 2026</a>
+                <a href="https://1drv.ms/i/c/534b23b5926c6a32/IQAnCbjTWf5TT5sN7Ojm7qVOAXpSSm0_8Z-_UQZ2SlcFhz4?e=kwt1nfk">Tarifs 2026</a>
             </div>
  
 
