Add target='_blank' to links for new tab opening

--- a/winterparty.html
+++ b/winterparty.html
@@ -169,11 +169,11 @@
         <div class="grid">
 
             <div class="card">
-                <a href="https://1drv.ms/i/c/534b23b5926c6a32/IQClX7NcklWiTLEtY3659iavAQfQVawyamYI46RgrW8yWeU?e=yb5uXK">Affiche 2026</a>
+                <a href="https://1drv.ms/i/c/534b23b5926c6a32/IQClX7NcklWiTLEtY3659iavAQfQVawyamYI46RgrW8yWeU?e=yb5uXK" target="_blank">Affiche 2026</a>
             </div>
 
 			<div class="card">
-                <a href="https://1drv.ms/i/c/534b23b5926c6a32/IQAnCbjTWf5TT5sN7Ojm7qVOAXpSSm0_8Z-_UQZ2SlcFhz4?e=kwt1nfk">Tarifs 2026</a>
+                <a href="https://1drv.ms/i/c/534b23b5926c6a32/IQAnCbjTWf5TT5sN7Ojm7qVOAXpSSm0_8Z-_UQZ2SlcFhz4?e=kwt1nfk" target="_blank">Tarifs 2026</a>
             </div>
  
 
