Fix HTML formatting and add target attribute

--- a/reunions_2526.html
+++ b/reunions_2526.html
@@ -175,7 +175,7 @@
             </div>
 
             <div class="card">
-                <a href="https://1drv.ms/b/c/534b23b5926c6a32/IQC0KThaGvpMSZor8gaEnjJqAdvtTbGhjyxHXHNPrdHpBoY?e=wut1qh">26/11/2025</a>
+                <a href="https://1drv.ms/b/c/534b23b5926c6a32/IQC0KThaGvpMSZor8gaEnjJqAdvtTbGhjyxHXHNPrdHpBoY?e=wut1qh" target="_blank">26/11/2025</a>
                 <div class="desc">Fêtes de Noël, Commission, Winterparty, Marche gourmande</div>
             </div>
 
@@ -188,6 +188,7 @@
 
 </body>
 </html>
+
 
 
 
