Fix HTML encoding issues in contacts.html

--- a/contacts.html
+++ b/contacts.html
@@ -170,7 +170,7 @@
         <div class="grid">
 
             <div class="card">
-                <a href="https://1drv.ms/b/c/534b23b5926c6a32/IQAsWTHamxA3SLjxvjhKE3XtAQYjYCHdfM38XUmX9ZD8FwM?e=Ubzt1d">Organigramme 2025-2026</a>
+                <a href="https://1drv.ms/b/c/534b23b5926c6a32/IQAsWTHamxA3SLjxvjhKE3XtAQYjYCHdfM38XUmX9ZD8FwM?e=Ubzt1d" target="_blank">Organigramme 2025-2026</a>
                 <div class="desc">Membres du comité sur la saison 2025-2026</div>
             </div>
 
@@ -184,6 +184,7 @@
 
 </body>
 </html>
+
 
 
 
