--- a/contacts.html
+++ b/contacts.html
@@ -158,7 +158,7 @@
 
         <nav>
             <a href="index.html">Accueil</a>
-            <a href="reunions_general.html">Ressources</a>
+            <a href="reunions_general.html">Réunions</a>
 			<a href="marche.html">Marche gourmande</a>
 			<a href="winterparty.html">Winterparty</a>
             <a href="contacts.html">Membres</a>
@@ -184,6 +184,7 @@
 
 </body>
 </html>
+
 
 
 
