Modify reunion dates and descriptions in HTML
Updated event details and links for upcoming reunions.

--- a/reunions_2526.html
+++ b/reunions_2526.html
@@ -170,8 +170,8 @@
         <div class="grid">
 
             <div class="card">
-                <a href="">18/02/2026</a>
-                <div class="desc">Marche gourmande</div>
+                <a href="https://1drv.ms/b/c/534b23b5926c6a32/IQCwwAHtJPKCS41EUP0EHll0AY7-JzGE08ZIPyzGaOPs7as?e=mNtU91" target="_blank">18/02/2026</a>
+                <div class="desc">Bilan Winterparty, Sportif, 90e anniversaire, Divers</div>
             </div>
 
             <div class="card">
@@ -188,6 +188,7 @@
 
 </body>
 </html>
+
 
 
 
